# pre-commit-update-usage

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_update_usage/: main.py
