[tool.poetry]
name = "pre-commit-update-usage"
version = "0.1.0"
description = ""
authors = ["Aurélien Joga <aurelien.joga@gmail.com>"]
readme = "README.md"
packages = [{include = "pre_commit_update_usage"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
pre-commit-update-usage = "pre_commit_update_usage.main:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
